--- a/src/App.css
+++ b/src/App.css
@@ -7,11 +7,11 @@
   pointer-events: none;
 }
 
-@media (prefers-reduced-motion: no-preference) {
+/* @media (prefers-reduced-motion: no-preference) {
   .App-logo {
     animation: App-logo-spin infinite 20s linear;
   }
-}
+} */
 
 .App-header {
   background-color: #282c34;
@@ -26,6 +26,10 @@
 
 .App-link {
   color: #61dafb;
+  text-decoration: none;
+}
+.App-link:hover{
+color: #000;
 }
 
 @keyframes App-logo-spin {
